# PCR

./: README.md  pyproject.toml
data/GDELT/: entity2id.json  relation2id.json  ts2id.json
data/WIKI/: entity2id.json  rel2text.txt  relation2id.json  ts2id.json
data/YAGO/: entity2id.json  relation2id.json
mycode/: apply.py  apply1.py  evaluate.py  globals.py  grapher.py  learn.py  pre_apply.py  rule_application.py  rule_learning.py  run.txt  score_functions.py  temporal_walk.py
