[tool.poetry]
name = "logical-tkgs"
version = "0.1.0"
description = ""
authors = ["Zichen Liu <gs.zcliu23@gzu.edu.cn>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
numpy = "^1.21.4"
joblib = "^1.2.0"
pandas = "^1.3.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
